--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@tailwindcss/line-clamp": "^0.4.4",
+        "alpinejs": "^3.12.3",
         "gsap": "^3.12.1",
         "three": "^0.153.0"
     }
